--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html lang= "en" class="h-full scroll-smooth transition-all ease-in-out">
+<html lang="en" class="h-full scroll-smooth transition-all ease-in-out">
     <script src="./index.js" type="module"></script>
     <link rel="stylesheet" href="style.css">
-    <body class="h-full">
-        <h1>BOOOOOOOOP</h1>
-    </body>
+    <body class="h-full"></body>
 </html>
